--- a/app/assets/stylesheets/avant_data.css.scss
+++ b/app/assets/stylesheets/avant_data.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the avant_data controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+path {
+  stroke: #000;
+  stroke-width: 1.5;
+  cursor: pointer;
+}
