--- a/app/views/avant_data/gender.html.erb
+++ b/app/views/avant_data/gender.html.erb
@@ -27,7 +27,7 @@
         .innerRadius(function(d) { return Math.sqrt(d.y); })
         .outerRadius(function(d) { return Math.sqrt(d.y + d.dy); });
 
-    d3.json("/gender.json", function(error, root) {
+    d3.json("/avant_data/gender.json", function(error, root) {
       var path = svg.datum(root).selectAll("path")
           .data(partition.nodes)
         .enter().append("path")
