add zipcode overlay demo

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,10 +18,18 @@
           <%= link_to "Address visualize", address_avant_data_path %>
         </li>
         <li>
-          <%= link_to "Race, ethnicity circle packing", circle_packing_avant_data_path %>
+          <%= link_to "Race, ethnicity circle packing graph", circle_packing_avant_data_path %>
         </li>
         <li>
           <%= link_to "Gender sunburst", gender_avant_data_path%>
+        </li>
+
+        <li>
+          <%= link_to "Race, ethnicity Bar hierarchy graph", bar_hierarchy_avant_data_path%>
+        </li>
+
+        <li>
+          <%= link_to "Zip code graph", zip_avant_data_path%>
         </li>
 
       </ul>
