add clustering code, open cors requests

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,10 @@
               <%= link_to "parallel visualize", parallel_avant_data_path%>
             </li>
 
+            <li>
+              <%= link_to "Clustering", cluster_avant_data_path%>
+            </li>
+
           </ul>
         </li>
       </ul>
