--- a/app/assets/stylesheets/avant_data.css.scss
+++ b/app/assets/stylesheets/avant_data.css.scss
@@ -107,3 +107,27 @@ svg {
   text-shadow: 0 1px 0 #fff;
   cursor: move;
 }
+
+circle {
+  stroke: #555;
+  stroke-width: 2px;
+  opacity: .8;
+}
+circle:hover {
+  stroke:#000;
+  opacity:1;
+}
+.btn-group {
+  margin-left: 330px;
+}
+
+.color-legend {
+  min-height: 100%; 
+  min-height: 100vh; 
+
+  display: flex;
+  align-items: center;
+
+  height:34px; font-weight:bold; text-align:center; color:white;
+  text-shadow: 2px 2px #333;
+}
