--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,10 @@
               <%= link_to "Race, ethnicity circle packing graph", circle_packing_avant_data_path %>
             </li>
             <li>
-              <%= link_to "Gender sunburst", gender_avant_data_path%>
+              <%= link_to "Scatter Chart", scatter_chart_avant_data_path%>
+            </li>
+            <li>
+              <%= link_to "Pie chart", pie_chart_avant_data_path%>
             </li>
 
             <li>
@@ -36,12 +39,17 @@
             </li>
 
             <li>
-              <%= link_to "parallel visualize", parallel_avant_data_path%>
+              <%= link_to "Parallel Coordinate Visualize", parallel_avant_data_path%>
             </li>
 
             <li>
               <%= link_to "Clustering", cluster_avant_data_path%>
             </li>
+
+            <li>
+              <%= link_to "Customizable Clustering", flexible_cluster_avant_data_path%>
+            </li>
+
 
           </ul>
         </li>
