--- a/app/views/avant_data/pie_chart.html.erb
+++ b/app/views/avant_data/pie_chart.html.erb
@@ -1,9 +1,58 @@
-<form>
+<!-- <form>
   <label><input type="radio" name="mode" value="size"> Size</label>
   <label><input type="radio" name="mode" value="count" checked> Count</label>
-</form>
 
-<%= content_for :footer_scripts do %>
+
+</form> -->
+
+<div class='container' ng-controller="PieChartController">
+  <div class='row'>
+
+    <div class='col-md-2'>
+      <select id="column" class="form-control" ng-model="dataColumn" ng-options="name for name in columns" ng-change="redraw(dataColumn)"></select>
+    </div>
+
+    <div class='col-md-10'>
+      <nvd3 options="options" data="data"></nvd3>
+    </div>
+    
+  </div>
+
+  <div class='row'>
+    <div class='col-sm-2'>
+      <ul style="padding-left: 5px" >
+        <li ng-repeat="column in selectedColumns">
+          {{ column }} [<a href ng-click="selectedColumns.splice($index, 1)">X</a>]
+        </li>
+      </ul>
+
+      <select ng-model="columnToBeAdded" ng-change="addToSelectedColumns(columnToBeAdded)" ng-options="column for column in difference(columns, selectedColumns)">
+      </select>
+
+    </div>
+    <div class='col-sm-10'>
+      <table class='table'>
+        <thead>
+          <tr>
+            <th ng-repeat="column in selectedColumns">{{ column }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class='info' ng-repeat="data in avantData | columnFilter: filterBy:dataColumn">
+            <td ng-repeat="column in selectedColumns">{{ data[column]}}</td>
+          </tr>
+          <tr ng-repeat="data in avantData">
+            <td ng-repeat="column in selectedColumns">{{ data[column]}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
+
+<% content_for :added_later do %>
   <script type="text/javascript">
     var width = 600,
       height = 600,
