--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,11 @@
 <head>
   <title>Avantgarde</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag 'application'%>
+  <%= javascript_include_tag 'application' if @use_js%>
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body ng-app="avantGarde">
   <%= render "shared/navbar"%>
   <%= yield %>
   <%= yield :footer_scripts %>
