--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,6 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Visualization options <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -52,6 +51,9 @@
 
 
           </ul>
+        </li>
+        <li>
+          <a href="http://ticino.ucsd.edu/avantgarde/dev_hua/motion.html ">Time based & map visualization</a>
         </li>
       </ul>
 
