--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -53,7 +53,7 @@
           </ul>
         </li>
         <li>
-          <a href="http://ticino.ucsd.edu/avantgarde/dev_hua/motion.html ">Time based & map visualization</a>
+          <a href="http://ticino.ucsd.edu/avantgarde/dev_hua/motion.html " target="_blank">Time-based & map visualization</a>
         </li>
       </ul>
 
