--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= render "shared/navbar"%>
   <%= yield %>
   <%= javascript_include_tag 'application' if @use_js%>
+  <%= javascript_include_tag 'nvd3' if @use_js%>
   <%= javascript_include_tag 'd3_related' if @use_js%>
   <%= yield :footer_scripts %>
 </body>
