break circle-packing angular into seperate file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= javascript_include_tag 'application' if @use_js%>
   <%= javascript_include_tag 'nvd3' if @use_js%>
   <%= javascript_include_tag 'angular-google-map' if @use_js%>
+  <%= javascript_include_tag 'circle-packing' if @use_js%>
   <%= javascript_include_tag 'd3_related' if @use_js%>
   <%= yield :footer_scripts %>
 </body>
