--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
+
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Visualization options <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li>
@@ -51,6 +52,9 @@
 
 
           </ul>
+        </li> -->
+        <li>
+          <%= link_to "Circle Packing & Parallel Coordinate Visualization", circle_packing_avant_data_path%>
         </li>
         <li>
           <a href="http://ticino.ucsd.edu/avantgarde/dev_hua/motion.html " target="_blank">Time-based & map visualization</a>
