--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 //= require avant_data
 //= require nvd3/nv.d3
 //= require angular-d3-circle-packing
+//= require yamm2/yamm/yamm.css
+//= require leaflet/dist/leaflet.css
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
