--- a/app/views/avant_data/_gadget_menu.html.erb
+++ b/app/views/avant_data/_gadget_menu.html.erb
@@ -25,6 +25,22 @@
   </div>
 </div>
 
+<div ng-show="checkCurrentPath('parallel_coordinate')">
+  <div class='row'>
+    <div class='col-xs-12'>
+      <ul style="padding-left: 5px" >
+        <li style="display: inline-block; margin-left: 15px" ng-repeat="column in selectedColumns">
+          {{ column }} [<a href ng-click="selectedColumns.splice($index, 1)">X</a>]
+        </li>
+      </ul>
+
+      <label>Add new data column: </label>
+      <select ng-model="parallelColumns" ng-change="addColumnsParallel(parallelColumns)" ng-options="column for column in difference(columns, selectedColumns)">
+      </select>
+    </div>
+  </div>
+</div>
+
 <div ng-show="checkCurrentPath('pie')">
   <div class='row'>
     <div class='col-xs-2'>
