add scatter plot, motion chart, bug fixing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,7 +3,7 @@
 //= require leaflet/dist/leaflet.css
 //= require flat-ui/dist/css/vendor/bootstrap.min
 //= require flat-ui/dist/css/flat-ui
-
+//= require nvd3/nv.d3
 
  body {
   padding-top: 40px;
