--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,11 +54,12 @@
           </ul>
         </li> -->
         <li>
-          <%= link_to "Circle Packing & Parallel Coordinate Visualization", circle_packing_avant_data_path%>
+          <%= link_to "Avantgarde Dataset", avant_data_path%>
         </li>
-        <li>
+        <!-- <li>
           <a href="http://ticino.ucsd.edu/avantgarde/dev_hua/motion.html " target="_blank">Time-based & map visualization</a>
-        </li>
+        </li> -->
+        <li><%= link_to "Pirc Dataset", pirc_data_path%></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
