--- a/app/views/avant_data/_gadget_menu.html.erb
+++ b/app/views/avant_data/_gadget_menu.html.erb
@@ -30,7 +30,7 @@
     <div class='col-xs-12'>
       <ul style="padding-left: 5px" >
         <li style="display: inline-block; margin-left: 15px" ng-repeat="column in selectedColumns">
-          {{ column }} [<a href ng-click="selectedColumns.splice($index, 1)">X</a>]
+          {{ column.field }} [<a href ng-click="removeColumn($index)">X</a>]
         </li>
       </ul>
 
@@ -46,5 +46,23 @@
     <div class='col-xs-2'>
       <select id="column" ng-model="pieChartColumn" ng-options="name for name in columns" ng-change="redrawPieChart(pieChartColumn)"></select>
     </div>
+  </div>
+</div>
+
+<div ng-show="checkCurrentPath('scatter_plot')">
+  <div class='row'>
+    <div class='col-xs-12'>
+      <label>X Axis: </label>
+      <select id="column" ng-model="scatterPlotX" ng-options="name for name in columns"></select>
+      <br>
+
+      <label>Y Axis: </label>
+      <select id="column" ng-model="scatterPlotY" ng-options="name for name in columns"></select>
+      <br>
+
+      <label>Shape size: </label>
+      <select id="column" ng-model="scatterPlotSize" ng-options="name for name in columns"></select>
+    </div>
+    <button ng-click="scatterPlotChart()" class='btn btn-primary'>Redraw</button>
   </div>
 </div>
