--- a/app/views/avant_data/_nav_menu.html.erb
+++ b/app/views/avant_data/_nav_menu.html.erb
@@ -1,19 +1,11 @@
 <div class='row'>
-  <div class='col-xs-4'>
-    Filters: {{ pathData }}
-    <hr>
-    Current visualiation: {{currentPath}}
-    <hr>
-    {{ filters }}
-  </div>
-
-  <div class='col-xs-7'>
+  <div class='col-xs-12'>
     <div class='col-xs-2' style="position: relative" ng-repeat="visual in visualPath" ng-click="showVisualizationComponent(visual)">
       <%= image_tag "{{visual}}.png", :width=>100%>
       <i style="  font-size: 20px;
   position: absolute;
   top: 30px;
-  right: -50px;" class="fa fa-long-arrow-right"></i>
+  right: 15px;" class="fa fa-long-arrow-right"></i>
       <div ng-show="pathData[visual]['filter']" style="font-size: 12px">
         {{pathData[visual]['filter']}} : {{pathData[visual]['value']}}
       </div>
@@ -36,8 +28,8 @@
               </div>
 
               <div class="col-xs-6">
-                <a ng-click="switchVisualization('scatterplot')" href="#" class="thumbnail">
-                  <%= image_tag "scatterplot.png"%>
+                <a ng-click="switchVisualization('scatter_plot')" href="#" class="thumbnail">
+                  <%= image_tag "scatter_plot.png"%>
                   Scatterplot Matrix
                 </a>
               </div>
@@ -47,6 +39,13 @@
               <a ng-click="switchVisualization('pie')" href="#" class="thumbnail">
                 <%= image_tag "pie.png"%>
                 Pie Chart
+              </a>
+            </div>
+
+            <div class="col-xs-6 col-sm-6">
+              <a ng-click="switchVisualization('motion_chart')" href="#" class="thumbnail">
+                <%= image_tag "motion_chart.png"%>
+                Motion Chart
               </a>
             </div>
 
@@ -65,5 +64,14 @@
     </div>
   
   </div>
+</div>
 
+<div class='row'>
+  <div class='col-xs-4'>
+    Filters: {{ pathData }}
+    <hr>
+    Current visualiation: {{currentPath}}
+    <hr>
+    {{ filters }}
+  </div>
 </div>
