--- a/app/views/avant_data/index.html.erb
+++ b/app/views/avant_data/index.html.erb
@@ -16,6 +16,8 @@
       <nvd3 id="pie" ng-show="checkCurrentPath('pie')" options="pie_options" data="data"></nvd3>
 
       <nvd3 id="scatter_plot" ng-show="checkCurrentPath('scatter_plot')" options="scatter_plot_options" data="data"></nvd3>
+
+      <div google-chart ng-show="checkCurrentPath('motion_chart')" chart="chartObject" style="height:600px; width:100%;"></div>
       
     </div>
 
@@ -33,7 +35,7 @@
 
   <hr>
 
-  <%#= render "data_section"%>
+  <%= render "data_section"%>
 
 </div>
 
