--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <%= javascript_include_tag 'leaflet-directive' if @use_js%>
   <%= javascript_include_tag 'ng-table' if @use_js%>
   <%= javascript_include_tag 'd3_related' if @use_js%>
+  <%= javascript_include_tag "google_chart" if @use_js%>
   <%= yield :footer_scripts %>
 </body>
 
